[project]
name = "skyvern-langchain"
version = "0.2.1"
description = ""
authors = [{ name = "lawyzheng", email = "lawy@skyvern.com" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"

dependencies = [
    "skyvern>=0.2.0",
    "langchain>=0.3.19",
    "langchain-core>=1.2.11",
    "urllib3>=2.6.0",
    # Transitive dependency security floors
    "authlib>=1.6.9",
    "pyasn1>=0.6.3",
    "PyJWT>=2.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["twine>=6.1.0,<7"]

[tool.hatch.build.targets.sdist]
include = ["skyvern_langchain"]

[tool.hatch.build.targets.wheel]
include = ["skyvern_langchain"]
