[project]
name = "skyvern-langchain"
version = "0.2.1"
description = ""
authors = [{ name = "lawyzheng", email = "lawy@skyvern.com" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"

dependencies = [
    "skyvern>=0.2.0",
    "langchain>=1.2.0",
    "langchain-core>=1.2.28",
    "urllib3>=2.6.0",
]

[tool.uv]
override-dependencies = [
    "authlib>=1.6.11",
    "pyasn1>=0.6.3",
    "pyjwt>=2.12.0",
    "fastmcp>=3.2.0",
    "mcp>=1.23.0",
    "websockets>=15.0.1",
    # litellm 1.83.7+ pins these exactly; relax for security upgrade.
    "jsonschema>=4.23.0",
    "python-dotenv>=1.2.2",
    "openai>=2.24.0",
    # Dependabot moderate security upgrades (transitive)
    "mako>=1.3.11",
    "pypdf>=6.10.2",
    "python-multipart>=0.0.26",
    "cryptography>=46.0.7",
    "langsmith>=0.7.31",
]

[tool.uv.sources]
skyvern = { path = "../.." }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["twine>=6.1.0,<7"]

[tool.hatch.build.targets.sdist]
include = ["skyvern_langchain"]

[tool.hatch.build.targets.wheel]
include = ["skyvern_langchain"]
