[project]
name = "skyvern-llamaindex"
version = "0.2.1"
description = "Skyvern integration for LlamaIndex"
authors = [{ name = "lawyzheng", email = "lawy@skyvern.com" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"
dependencies = [
    "skyvern>=0.2.0",
    "llama-index>=0.12.19,<0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["twine>=6.1.0,<7"]

[tool.hatch.build.targets.sdist]
include = ["skyvern_llamaindex"]

[tool.hatch.build.targets.wheel]
include = ["skyvern_llamaindex"]
