[project]
name = "skyvern-llamaindex"
version = "0.2.2"
description = "Skyvern integration for LlamaIndex"
authors = [{ name = "lawyzheng", email = "lawy@skyvern.com" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"
dependencies = [
    "skyvern>=0.2.0",
    "llama-index>=0.12.19,<0.14",
    "urllib3>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["twine>=6.1.0,<7"]

# Security: override vulnerable transitive dependency versions (SKY-8441)
# Using override-dependencies because several of these are transitive deps
# that need newer versions than what the resolver picks by default.
[tool.uv]
override-dependencies = [
    "authlib>=1.6.9",
    "pyasn1>=0.6.3",
    "PyJWT>=2.12.0",
    "fastmcp>=2.14.2",
    "mcp>=1.23.0",
    "pypdf>=6.8.0",
    "pillow>=12.1.1",
    "nltk>=3.9.3",
    "python-multipart>=0.0.22",
    "starlette>=0.49.1",
    "google-cloud-aiplatform>=1.133.0",
    # Cascading overrides needed to unblock the above security constraints:
    # fastmcp>=2.14.2 requires websockets>=15 (skyvern pins >=12,<15.1)
    "websockets>=15.0.1,<17",
    # skyvern requires openai>=1.68.2 but llama-index needs <2;
    # keep openai in v1 range for llama-index compatibility
    "openai>=1.40.0,<2",
]

[tool.hatch.build.targets.sdist]
include = ["skyvern_llamaindex"]

[tool.hatch.build.targets.wheel]
include = ["skyvern_llamaindex"]
